<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_brand_2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/margin_26"
                android:src="@drawable/ic_size_24_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextBodyBoldLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_tokens"
                android:textColor="@color/contentPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnScan"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:src="@drawable/ic_size_24_scan_qr"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/labelReceiver"
            style="@style/TextBodyBoldLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/to_with_dots"

            android:textColor="@color/contentTertiary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <io.novafoundation.nova.common.view.PillButtonView
            android:id="@+id/tvReceiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/labelReceiver"
            app:layout_constraintStart_toEndOf="@+id/labelReceiver"
            app:layout_constraintTop_toTopOf="@+id/labelReceiver"
            app:pill_button_size="small"
            app:pill_button_type="secondary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/holder_source"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_24"
            android:background="@drawable/bg_rounded_8_black"
            android:backgroundTint="@color/white"
            android:elevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/labelReceiver">

            <ImageView
                android:id="@+id/imAsset"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/circle_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imNotNative"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="-18dp"
                android:background="@drawable/circle_black"
                android:outlineProvider="background"
                android:padding="3dp"

                android:src="@drawable/ic_size_16_link"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/imAsset"
                app:layout_constraintTop_toTopOf="@+id/imAsset"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tvAsset"
                style="@style/TextBodyBoldLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/contentPrimary"
                app:layout_constraintBottom_toTopOf="@+id/tvAssetAvailable"
                app:layout_constraintEnd_toStartOf="@+id/imSelectOther"
                app:layout_constraintStart_toEndOf="@+id/imAsset"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Polkadot"

                />

            <TextView
                android:id="@+id/tvAssetAvailable"
                style="@style/TextBodyBoldSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/transferable_n"
                android:textColor="@color/contentTertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tvAsset"
                app:layout_constraintStart_toStartOf="@id/tvAsset"
                app:layout_constraintTop_toBottomOf="@+id/tvAsset"

                />

            <ImageView
                android:id="@+id/imSelectOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_size_24_cheveron_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/contentTertiary" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/holderInput"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_rounded_strock"
            app:layout_constraintTop_toBottomOf="@+id/holder_source">

            <LinearLayout
                android:id="@+id/holderEditText"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@drawable/bg_rounded_8_black"
                android:backgroundTint="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/tvAmount"
                    style="@style/TextHeadingsH2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:textColor="@color/contentPrimary"
                    android:textColorHint="@color/contentTertiary" />

                <TextView
                    android:id="@+id/amountType"
                    style="@style/TextHeadingsH6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/bg_btn_pill_primary_active"
                    android:backgroundTint="@color/neutral100"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:textAllCaps="true"
                    android:textColor="@color/neutral600"
                    tools:text="USD" />


            </LinearLayout>

            <io.novafoundation.nova.common.view.RectButtonView
                android:id="@+id/btnSwap"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:rotation="90"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/holderEditText"
                app:rect_button_ic_start="@drawable/ic_size_24_transaction_swap"
                app:rect_button_size="small"
                app:rect_button_type="secondary" />

            <TextView
                android:id="@+id/tvCurrentAmount"
                style="@style/TextBodyRegularSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp"
                android:textAllCaps="true"
                android:textColor="@color/black_30"
                app:layout_constraintBottom_toBottomOf="@id/btnSwap"
                app:layout_constraintStart_toEndOf="@+id/btnSwap"
                app:layout_constraintTop_toTopOf="@+id/btnSwap"
                tools:text="210 dot" />

            <TextView
                android:id="@+id/tvMax"
                style="@style/TextBodyRegularSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/max"
                android:textAllCaps="true"
                android:textColor="@color/indigo500"
                app:layout_constraintBottom_toBottomOf="@id/btnSwap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnSwap"
                app:layout_goneMarginEnd="12dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/labelFee"
            style="@style/TextBodyRegularSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/network_fee"
            android:textColor="@color/contentTertiary"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/holderInput" />

        <ImageView
            android:id="@+id/imFee"
            style="@style/TextBodyRegularMedium"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_size_24_solid_information_circle"
            app:layout_constraintBottom_toBottomOf="@id/labelFee"
            app:layout_constraintStart_toEndOf="@+id/labelFee"
            app:layout_constraintTop_toTopOf="@+id/labelFee"
            app:tint="@color/contentTertiary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/labelFee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/labelFee">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/feeProgress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="64dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/contentPrimary"

                app:indicatorSize="24dp"
                app:trackThickness="2dp"

                />

            <TextView
                android:id="@+id/tvCurrencyFee"
                style="@style/TextBodyRegularMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAllCaps="true"
                android:textColor="@color/contentTertiary"

                app:layout_goneMarginEnd="12dp"
                tools:text="0.01 DOT" />

            <TextView
                android:id="@+id/tvDotFee"
                style="@style/TextBodyRegularMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:textAllCaps="true"
                android:textColor="@color/contentPrimary"
                tools:text="0.01 DOT" />
        </LinearLayout>


        <io.novafoundation.nova.common.view.RectButtonView
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rect_button_text="Preview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>